--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,7 @@ h1 {
 }
 
 .headerContainer {
-  background-color: red;
+  background-color: rgb(31, 28, 28);;
 }
 
 .navbarContainer {
@@ -80,7 +80,7 @@ h1 {
 .navbarContainer .searcher button {
   padding: 10px 5px;
   border: 2px solid #fff;
-  background: none; 
+  background: none;
   border-radius: 3px;
   font-size: 15px;
   font-weight: bold;
@@ -108,6 +108,8 @@ h1 {
   align-items: center;
   justify-content: center;
   height: 600px;
+  flex-direction: column;
+  border: 3px solid #ccc;
   background: rgb(78, 77, 77);
 }
 
@@ -115,8 +117,25 @@ h1 {
   background: rgb(148, 144, 144);
 }
 
+.main-articles article.is-light {
+  background: rgb(187, 181, 181);
+}
+
+.main-articles article.is-white {
+  background: rgb(233, 231, 231);
+}
+
+.main-articles article.is-white h2,
+p {
+  color: rgb(36, 34, 34);
+}
+
+.main-articles article h2.big {
+  font-size: 3.4em;
+}
+
 .main-articles article p {
-  font-size: 2.5rem;
+  font-size: 1.6rem;
   margin: 0 40px;
 }
 
