--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,10 @@ h1 {
   margin: 0;
 }
 
+h2 {
+  font-family: 'Ubuntu', sans-serif;
+}
+
 .clear {
   clear: both;
 }
@@ -113,6 +117,10 @@ h1 {
   background: rgb(78, 77, 77);
 }
 
+.main-articles article .is-grey-medium{
+  background: rgb(153, 153, 153);
+}
+
 .main-articles article.is-grey-light {
   background: rgb(148, 144, 144);
 }
@@ -191,4 +199,16 @@ p {
 .main-articles .guides-posts .is-one {
   float: left;
   width: 25%;
+}
+
+.is-largest-block footer .medium-height {
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+footer p {
+  padding: 20px 0;
 }
